--- a/index.html
+++ b/index.html
@@ -384,6 +384,78 @@
     .k-2f{ left: calc(5 * var(--step)); top: calc(1 * var(--step)); }
     .k-2g{ left: calc(6 * var(--step)); top: calc(1 * var(--step)); }
 
+    /* ===== Kipp-Entscheidungs-Overlay (PNG + Hotspots) ===== */
+    .kippDecision{
+      position:absolute;
+      left: var(--step);  /* Raster 2B */
+      top:  var(--step);  /* Raster 2B */
+      width: calc(6 * var(--cell) + 5 * var(--cell-gap));
+      height: calc(6 * var(--cell) + 5 * var(--cell-gap));
+      z-index: 8000;
+      pointer-events: none;
+      user-select:none;
+    }
+    .kippDecision.hidden{ display:none !important; }
+
+    .kippDecision img{
+      position:absolute;
+      inset:0;
+      width:100%;
+      height:100%;
+      object-fit: contain;
+      pointer-events:none;
+      user-select:none;
+    }
+
+    /* Hotspots liegen über dem PNG, fangen Clicks ab */
+    .hotspotLayer{
+      position:absolute;
+      inset:0;
+      pointer-events:auto;
+    }
+    .hotspot{
+      position:absolute;
+      pointer-events:auto;
+      background: rgba(0,0,0,0.0);
+      -webkit-tap-highlight-color: transparent;
+    }
+
+    /* Puls-Overlays (animieren, obwohl PNG "alles in einer Datei" ist) */
+    @keyframes hsPulse{
+      0%,100%{ transform: translateZ(0) scale(1); opacity: .18; }
+      50%    { transform: translateZ(0) scale(1.08); opacity: .42; }
+    }
+    @keyframes hsBlink{
+      0%,100%{ opacity: .10; }
+      50%    { opacity: .36; }
+    }
+    .pulseBox{
+      position:absolute;
+      inset:0;
+      border: 2px solid rgba(234,215,190,0.55);
+      box-shadow:
+        0 0 0 2px rgba(0,0,0,0.55) inset,
+        0 10px 18px rgba(0,0,0,0.35);
+      background: rgba(255,255,255,0.02);
+      opacity: .22;
+      border-radius: 2px;
+      pointer-events:none;
+      transform-origin: 50% 50%;
+      animation: hsPulse 1.25s ease-in-out infinite;
+    }
+    .pulseBox.arrow{
+      border-color: rgba(234,215,190,0.65);
+      animation: hsBlink 0.9s ease-in-out infinite;
+    }
+    .pulseBox.selected{
+      opacity: .85;
+      border-color: rgba(249,150,30,0.95);
+      box-shadow:
+        0 0 0 2px rgba(0,0,0,0.65) inset,
+        0 12px 22px rgba(0,0,0,0.45);
+      animation: none;
+    }
+
     /* ===== EXIT (Raster 1H) ===== */
     .exitBtn{
       position:absolute;
@@ -809,13 +881,19 @@
 
         <div class="ball" aria-label="Kugel"></div>
 
+        <!-- Kipp-Entscheidung Overlay -->
+        <div id="kippDecision" class="kippDecision hidden" aria-label="Kipp Entscheidung">
+          <img id="kippDecisionImg" src="" alt="Kipp Entscheidung Overlay">
+          <div id="hotspotLayer" class="hotspotLayer" aria-label="Hotspots"></div>
+        </div>
+
         <!-- EXIT Button auf Raster 1H -->
         <button id="exitBtn" class="exitBtn" aria-label="Spiel beenden">
           <span>X</span>
         </button>
       </div>
 
-      <!-- Console-Block (bleibt gleich groß; Inhalte wechseln) -->
+      <!-- Console-Block -->
       <div class="kippspeedBlock attnSpeed" id="kippspeedBlock" aria-label="Konsole">
 
         <!-- MODE 1: Speed -->
@@ -911,6 +989,11 @@
     const gcPoints    = document.getElementById("gcPoints");
     const gcHi        = document.getElementById("gcHi");
 
+    // Overlay
+    const kippDecisionEl  = document.getElementById("kippDecision");
+    const kippDecisionImg = document.getElementById("kippDecisionImg");
+    const hotspotLayer    = document.getElementById("hotspotLayer");
+
     function sleep(ms){ return new Promise(res => setTimeout(res, ms)); }
 
     function setBoardSquare(){
@@ -991,8 +1074,8 @@
 
     // ===== Rotation / Views =====
     const rotDeg = [0, 90, 180, 270];
-    let rotIndex  = 0;
-    let faceIndex = 0;
+    let rotIndex  = 0;   // 0..3 (Q0..Q3)
+    let faceIndex = 0;   // 0..2 (W1..W3)
 
     function setRotationSnap(){
       const deg = rotDeg[rotIndex];
@@ -1047,8 +1130,13 @@
     }
 
     function advanceFullCW(){
-      rotIndex  = (rotIndex + 1) % 4;
-      faceIndex = (faceIndex + 1) % 3;
+      rotIndex  = (rotIndex + 1) % 4;     // Q0->Q1->Q2->Q3
+      faceIndex = (faceIndex + 1) % 3;    // W1->W2->W3
+      setRotationSnap();
+    }
+    function advanceFullCCW(){
+      rotIndex  = (rotIndex + 3) % 4;     // Q0->Q3->Q2->Q1
+      faceIndex = (faceIndex + 2) % 3;    // W1->W3->W2
       setRotationSnap();
     }
 
@@ -1057,6 +1145,7 @@
       faceIndex = 0;
       setRotationSnap();
       clearAllNumbers();
+      hideDecisionOverlay();
       showW();
       renderWEmpty();
     }
@@ -1070,6 +1159,9 @@
 
     let runningSet      = false;
     let setToken        = 0;
+
+    let runningMove     = false;
+    let moveToken       = 0;
 
     function setAttentionSpeed(on){
       kippspeedBlock.classList.toggle("attnSpeed", !!on);
@@ -1107,6 +1199,7 @@
       gcTop.classList.add("hiddenInfo");
       enterSpeedAttention();
       setPlayGlyph(false);
+      hideDecisionOverlay();
     }
 
     function showGameMode(){
@@ -1114,11 +1207,12 @@
       gameMode.classList.remove("hidden");
       gcTop.classList.add("hiddenInfo"); // erst NACH Zahlensetzen anzeigen
       enterSetAttention();               // Zahlen setzen blinkt als erste Aktion
+      hideDecisionOverlay();
     }
 
     // ===== Demo Ablauf (Play/Pause) – ohne Pfeil/HUD/Zahlen =====
     async function waitOrPause(ms, myToken){
-      const slice = 40; // fein genug für Pause
+      const slice = 40;
       let elapsed = 0;
       while(elapsed < ms){
         if(myToken !== demoToken) return false;
@@ -1139,7 +1233,8 @@
       demoPaused = false;
       const myToken = ++demoToken;
 
-      // sofort „was passiert“: direkt mit Zwischenkipp starten
+      hideDecisionOverlay();
+
       showKip();
       renderKipEmpty();
       if(!await waitOrPause(getTiming().holdMs, myToken)) { runningDemo=false; return; }
@@ -1163,7 +1258,6 @@
       showW(); renderWEmpty();
       if(!await waitOrPause(getTiming().holdMs, myToken)) { runningDemo=false; return; }
 
-      // Erweiterung: Q3 -> Zwischenkipp -> W2 auf Q0
       showKip(); renderKipEmpty();
       if(!await waitOrPause(getTiming().holdMs, myToken)) { runningDemo=false; return; }
 
@@ -1181,7 +1275,7 @@
       setPlayGlyph(false);
     }
 
-    // ===== Zahlensetzen-Logik (bekannter Ablauf, ohne Pfeil/HUD) =====
+    // ===== Zahlensetzen-Logik =====
     let planned = [
       [null,null,null,null],
       [null,null,null,null],
@@ -1210,17 +1304,24 @@
       const [f1,f2,f3,f4] = face;
       return [f4, f3, f2, f1];
     }
+    function mapHiddenToVisible_CCW(face){
+      const [f1,f2,f3,f4] = face;
+      // Gegenrichtung (Spiegel zur CW-Abbildung)
+      return [f2, f1, f4, f3];
+    }
 
-    function renderKip(){
+    function renderKipDir(dir){
       setRotationSnap();
       const curr = sets[faceIndex];
-      const nextFaceIndex = (faceIndex + 1) % 3;
+      const nextFaceIndex = (dir === "CW") ? ((faceIndex + 1) % 3) : ((faceIndex + 2) % 3);
       const next = sets[nextFaceIndex];
 
+      // Rechts = aktuelle Vollfläche (wie bisher)
       for(let i=0;i<4;i++) renderNumber(slotTargetsKipRight[i], curr[i]);
 
-      const nextPreview = mapHiddenToVisible_CW(next);
-      for(let i=0;i<4;i++) renderNumber(slotTargetsKipLeft[i], nextPreview[i]);
+      // Links = Vorschau (abhängig von Richtung)
+      const preview = (dir === "CW") ? mapHiddenToVisible_CW(next) : mapHiddenToVisible_CCW(next);
+      for(let i=0;i<4;i++) renderNumber(slotTargetsKipLeft[i], preview[i]);
     }
 
     function reroll12_keepEmpty(){
@@ -1241,6 +1342,7 @@
 
       clearAllNumbers();
       setRotationSnap();
+      hideDecisionOverlay();
     }
 
     async function runSetNumbersCycle(){
@@ -1248,54 +1350,57 @@
       runningSet = true;
       const myToken = ++setToken;
 
+      hideDecisionOverlay();
+      cancelMove();
+
       reroll12_keepEmpty();
 
-      // 1) erst leer (kurz), dann Zahlen
       showW();
       renderWEmpty();
-      if(!(await (async()=>{ await sleep(Math.round(getTiming().holdMs * 0.5)); return (myToken===setToken); })())) { runningSet=false; return; }
+      await sleep(Math.round(getTiming().holdMs * 0.5)); if(myToken !== setToken) { runningSet=false; return; }
 
       ensureAssigned(0);
       renderW();
-      if(!(await (async()=>{ await sleep(Math.round(getTiming().holdMs * 0.5)); return (myToken===setToken); })())) { runningSet=false; return; }
+      await sleep(Math.round(getTiming().holdMs * 0.5)); if(myToken !== setToken) { runningSet=false; return; }
 
       showKip();
-      renderKip();
-      if(!(await (async()=>{ await sleep(getTiming().holdMs); return (myToken===setToken); })())) { runningSet=false; return; }
+      renderKipDir("CW");
+      await sleep(getTiming().holdMs); if(myToken !== setToken) { runningSet=false; return; }
 
       advanceFullCW();
       showW();
       renderWEmpty();
-      if(!(await (async()=>{ await sleep(Math.round(getTiming().holdMs * 0.5)); return (myToken===setToken); })())) { runningSet=false; return; }
+      await sleep(Math.round(getTiming().holdMs * 0.5)); if(myToken !== setToken) { runningSet=false; return; }
 
       ensureAssigned(1);
       renderW();
-      if(!(await (async()=>{ await sleep(Math.round(getTiming().holdMs * 0.5)); return (myToken===setToken); })())) { runningSet=false; return; }
+      await sleep(Math.round(getTiming().holdMs * 0.5)); if(myToken !== setToken) { runningSet=false; return; }
 
       showKip();
-      renderKip();
-      if(!(await (async()=>{ await sleep(getTiming().holdMs); return (myToken===setToken); })())) { runningSet=false; return; }
+      renderKipDir("CW");
+      await sleep(getTiming().holdMs); if(myToken !== setToken) { runningSet=false; return; }
 
       advanceFullCW();
       showW();
       renderWEmpty();
-      if(!(await (async()=>{ await sleep(Math.round(getTiming().holdMs * 0.5)); return (myToken===setToken); })())) { runningSet=false; return; }
+      await sleep(Math.round(getTiming().holdMs * 0.5)); if(myToken !== setToken) { runningSet=false; return; }
 
       ensureAssigned(2);
       renderW();
-      if(!(await (async()=>{ await sleep(Math.round(getTiming().holdMs * 0.5)); return (myToken===setToken); })())) { runningSet=false; return; }
+      await sleep(Math.round(getTiming().holdMs * 0.5)); if(myToken !== setToken) { runningSet=false; return; }
 
       showKip();
-      renderKip();
-      if(!(await (async()=>{ await sleep(getTiming().holdMs); return (myToken===setToken); })())) { runningSet=false; return; }
+      renderKipDir("CW");
+      await sleep(getTiming().holdMs); if(myToken !== setToken) { runningSet=false; return; }
 
-      // Ende: wieder Vollansicht
       advanceFullCW();
       showW();
       renderW();
 
-      // Nach Abschluss: Ziel-Info auf der schwarzen Konsole anzeigen
       showTargetInfoAfterSet();
+
+      // nach "Zahlen setzen" sofort in die Kipp-Entscheidung
+      showDecisionOverlayForCurrentQuadrant();
 
       runningSet = false;
     }
@@ -1305,7 +1410,7 @@
       runningSet = false;
     }
 
-    // ===== Ziel-Info (vorerst: random Farbe + Zahl; Deck-System später) =====
+    // ===== Ziel-Info (vorerst: random Farbe + Zahl) =====
     const targetColors = ["--blau","--orange","--gruen","--violett"];
     function showTargetInfoAfterSet(){
       const n = Math.floor(Math.random() * 12) + 1;
@@ -1319,38 +1424,222 @@
       setAttentionSet(false);
     }
 
+    // ===== Kipp-Entscheidung Overlay (4 PNGs + animierte Hotspots) =====
+    const overlayFiles = {
+      Q0: "KippEntscheidung_Q0.png",
+      Q1: "KippEntscheidung_Q1.png",
+      Q2: "KippEntscheidung_Q2.png",
+      Q3: "KippEntscheidung_Q3.png",
+    };
+
+    function quadrantFromRotIndex(){
+      // rotIndex: 0->Q0, 1->Q1, 2->Q2, 3->Q3
+      return ["Q0","Q1","Q2","Q3"][rotIndex] || "Q0";
+    }
+
+    // Hotspot-Geometrie (in Prozent vom 6×6 Overlay)
+    // -> Das ist so angelegt, dass du es NUR hier feinjustieren müsstest, falls nötig.
+    const HS = {
+      // Pfeile: links/rechts (ungefähr)
+      arrowLeft:  { x:  6, y: 14, w: 28, h: 22 },
+      arrowRight: { x: 66, y: 14, w: 28, h: 22 },
+
+      // 1..6 Buttons (Reihe unten)
+      // Wave von links nach rechts
+      nums: [
+        { n:1, x:  8, y: 64, w: 12.5, h: 16 },
+        { n:2, x: 22, y: 64, w: 12.5, h: 16 },
+        { n:3, x: 36, y: 64, w: 12.5, h: 16 },
+        { n:4, x: 50, y: 64, w: 12.5, h: 16 },
+        { n:5, x: 64, y: 64, w: 12.5, h: 16 },
+        { n:6, x: 78, y: 64, w: 12.5, h: 16 },
+      ]
+    };
+
+    let selectedDir = null;   // "CW" | "CCW"
+    let selectedCount = null; // 1..6
+
+    function clearHotspots(){
+      hotspotLayer.innerHTML = "";
+    }
+
+    function mkHotspot(id, rectPct, onClick){
+      const d = document.createElement("div");
+      d.className = "hotspot";
+      d.dataset.id = id;
+      d.style.left   = rectPct.x + "%";
+      d.style.top    = rectPct.y + "%";
+      d.style.width  = rectPct.w + "%";
+      d.style.height = rectPct.h + "%";
+      d.addEventListener("click", (e) => {
+        e.preventDefault();
+        e.stopPropagation();
+        onClick();
+      }, { passive:false });
+
+      // Puls-Layer (sichtbar, aber transparent)
+      const pulse = document.createElement("div");
+      pulse.className = "pulseBox";
+      d.appendChild(pulse);
+
+      return d;
+    }
+
+    function applyPulseStyles(){
+      // arrows alternierend blinken
+      const left = hotspotLayer.querySelector('[data-id="dirCCW"] .pulseBox');
+      const right = hotspotLayer.querySelector('[data-id="dirCW"] .pulseBox');
+      if(left)  left.classList.add("arrow");
+      if(right) right.classList.add("arrow");
+
+      if(left)  left.style.animationDelay = "0ms";
+      if(right) right.style.animationDelay = "450ms";
+
+      // numbers wave
+      HS.nums.forEach((r, i) => {
+        const el = hotspotLayer.querySelector(`[data-id="n${r.n}"] .pulseBox`);
+        if(el){
+          el.style.animationDelay = (i * 90) + "ms";
+        }
+      });
+    }
+
+    function setSelectedVisuals(){
+      // clear all selected
+      hotspotLayer.querySelectorAll(".pulseBox").forEach(p => p.classList.remove("selected"));
+
+      if(selectedDir === "CW"){
+        const p = hotspotLayer.querySelector('[data-id="dirCW"] .pulseBox');
+        if(p) p.classList.add("selected");
+      }
+      if(selectedDir === "CCW"){
+        const p = hotspotLayer.querySelector('[data-id="dirCCW"] .pulseBox');
+        if(p) p.classList.add("selected");
+      }
+      if(selectedCount){
+        const p = hotspotLayer.querySelector(`[data-id="n${selectedCount}"] .pulseBox`);
+        if(p) p.classList.add("selected");
+      }
+    }
+
+    function showDecisionOverlayForCurrentQuadrant(){
+      selectedDir = null;
+      selectedCount = null;
+      clearHotspots();
+
+      const q = quadrantFromRotIndex();
+      kippDecisionImg.src = overlayFiles[q] || overlayFiles.Q0;
+
+      // Pfeile
+      hotspotLayer.appendChild(mkHotspot("dirCCW", HS.arrowLeft, () => {
+        selectedDir = "CCW";
+        setSelectedVisuals();
+        tryStartPlayerMoveIfReady();
+      }));
+      hotspotLayer.appendChild(mkHotspot("dirCW", HS.arrowRight, () => {
+        selectedDir = "CW";
+        setSelectedVisuals();
+        tryStartPlayerMoveIfReady();
+      }));
+
+      // Zahlen 1..6
+      HS.nums.forEach((r) => {
+        hotspotLayer.appendChild(mkHotspot(`n${r.n}`, r, () => {
+          selectedCount = r.n;
+          setSelectedVisuals();
+          tryStartPlayerMoveIfReady();
+        }));
+      });
+
+      applyPulseStyles();
+      setSelectedVisuals();
+
+      kippDecisionEl.classList.remove("hidden");
+      kippDecisionEl.style.pointerEvents = "none";     // Container selbst nicht
+      hotspotLayer.style.pointerEvents = "auto";       // nur Hotspots
+
+      // während Entscheidung: Stop bleibt möglich, Demo aus
+      cancelDemo();
+    }
+
+    function hideDecisionOverlay(){
+      kippDecisionEl.classList.add("hidden");
+      clearHotspots();
+      selectedDir = null;
+      selectedCount = null;
+    }
+
+    function tryStartPlayerMoveIfReady(){
+      if(!selectedDir || !selectedCount) return;
+      // sobald beides gewählt, starten
+      hideDecisionOverlay();
+      runPlayerMove(selectedDir, selectedCount);
+    }
+
+    // ===== Player Move (dir + count) =====
+    async function runPlayerMove(dir, count){
+      if(runningMove) return;
+      runningMove = true;
+      const myToken = ++moveToken;
+
+      const { holdMs } = getTiming();
+
+      for(let i=0; i<count; i++){
+        // Zwischenkipp anzeigen
+        showKip();
+        renderKipDir(dir);
+        await sleep(holdMs);
+        if(myToken !== moveToken){ runningMove=false; return; }
+
+        // zur nächsten Vollfläche
+        if(dir === "CW") advanceFullCW();
+        else advanceFullCCW();
+
+        showW();
+        renderW();
+        await sleep(holdMs);
+        if(myToken !== moveToken){ runningMove=false; return; }
+      }
+
+      // Nach dem Zug: wieder Overlay passend zur aktuellen Würfellage
+      showDecisionOverlayForCurrentQuadrant();
+
+      runningMove = false;
+    }
+
+    function cancelMove(){
+      moveToken++;
+      runningMove = false;
+    }
+
     // ===== Events =====
     speedSlider.addEventListener("input", () => {
       hasAdjustedOnce = true;
-      // während Demo-Pause darf man regeln; Demo läuft weiter mit aktueller Timing-Berechnung
       if(!runningDemo) enterPlayAttention();
     });
 
-    // Play/Pause Dual:
-    // - wenn Demo nicht läuft -> Start (Glyph: Pause)
-    // - wenn Demo läuft -> Toggle Pause/Resume (Glyph wechselt)
+    // Play/Pause Dual
     btnPlay.addEventListener("click", async () => {
       if(!hasAdjustedOnce) enterPlayAttention();
 
       if(!runningDemo){
         setAttentionPlay(false);
-        setPlayGlyph(true);       // jetzt Pause anzeigen
+        setPlayGlyph(true);
         await runDemoCycle();
-        // nach Ende: wieder Play anzeigen + Blinkhinweis
         setPlayGlyph(false);
         enterPlayAttention();
         return;
       }
 
-      // Demo läuft -> Pause/Resume toggeln
       demoPaused = !demoPaused;
       setPlayGlyph(demoPaused ? false : true);
     });
 
-    // OK: Demo/Set abbrechen, W1Q0 anzeigen, Game-Mode rein
+    // OK: Demo/Set/Move abbrechen, Game-Mode rein
     btnOk.addEventListener("click", () => {
       cancelDemo();
       cancelSetNumbers();
+      cancelMove();
       resetToW1Q0_Empty();
       setAttentionPlay(false);
       setAttentionSpeed(false);
@@ -1362,10 +1651,11 @@
       await runSetNumbersCycle();
     });
 
-    // STOP: Abbruch + zurück zur Speed-Einstellung
+    // STOP: alles abbrechen + zurück zur Speed-Einstellung
     btnStop.addEventListener("click", () => {
       cancelDemo();
       cancelSetNumbers();
+      cancelMove();
       resetToW1Q0_Empty();
       showSpeedMode();
     });
