--- a/index.html
+++ b/index.html
@@ -44,12 +44,15 @@
       --rotSign: 1;
       --rot: 0deg;
 
-      /* ===== Box.png Farbangleichung Richtung ehemaligem BoxFloor =====
-         - box-filter: nimmt Gelbstich raus / Richtung Magenta-Rotbraun
-         - box-tint-opacity: wie stark der alte Bodenfarbton reinmischt
-      */
-      --box-filter: saturate(0.92) hue-rotate(-10deg) brightness(0.92) contrast(1.08);
-      --box-tint-opacity: 0.35; /* 0.25 = subtil | 0.45 = kräftiger */
+      /* ===== Tisch / Filz (NEU) ===== */
+      --table-wine-0: #2a0b12;  /* sehr dunkel */
+      --table-wine-1: #3a0f1a;  /* Grundton */
+      --table-wine-2: #511320;  /* Licht */
+      --table-wine-3: #651a2a;  /* Highlight */
+      --table-vignette: rgba(0,0,0,0.55);
+      --table-shadow: rgba(0,0,0,0.28);
+      --table-grain-a: rgba(255,255,255,0.035);
+      --table-grain-b: rgba(0,0,0,0.06);
     }
 
     html, body { height: 100%; }
@@ -58,25 +61,48 @@
       margin:0;
       display:flex;
       justify-content:center;
+
+      /* ===== Weinroter Tisch (Filz-Look), neutral in Schwarz schattiert ===== */
       background:
-        radial-gradient(ellipse at center, rgba(0,0,0,0.00) 40%, rgba(0,0,0,0.38) 100%),
-        linear-gradient(180deg, rgba(0,0,0,0.20), rgba(0,0,0,0.00) 18%, rgba(0,0,0,0.00) 82%, rgba(0,0,0,0.22)),
+        /* Vignette */
+        radial-gradient(ellipse at center, rgba(0,0,0,0.00) 42%, var(--table-vignette) 100%),
+
+        /* sanfter Top/Bottom Falloff (nur schwarz) */
+        linear-gradient(180deg,
+          rgba(0,0,0,0.22),
+          rgba(0,0,0,0.00) 18%,
+          rgba(0,0,0,0.00) 82%,
+          rgba(0,0,0,0.26)
+        ),
+
+        /* feine Filz-Struktur (quer) */
         repeating-linear-gradient(
           90deg,
-          rgba(0,0,0,0.10) 0px,
-          rgba(0,0,0,0.10) 2px,
-          rgba(255,255,255,0.04) 2px,
-          rgba(255,255,255,0.04) 56px
+          var(--table-grain-b) 0px,
+          var(--table-grain-b) 1px,
+          transparent 1px,
+          transparent 56px
         ),
+
+        /* feine Filz-Struktur (diagonal) */
         repeating-linear-gradient(
-          12deg,
-          rgba(0,0,0,0.05) 0px,
-          rgba(0,0,0,0.05) 8px,
-          rgba(255,255,255,0.03) 8px,
-          rgba(255,255,255,0.03) 16px
+          14deg,
+          rgba(0,0,0,0.045) 0px,
+          rgba(0,0,0,0.045) 7px,
+          rgba(255,255,255,0.028) 7px,
+          rgba(255,255,255,0.028) 14px
         ),
-        linear-gradient(180deg, #e0b47c, #c89259);
+
+        /* “Bloom” in der Mitte (weinrot, nicht schmutzig) */
+        radial-gradient(120% 95% at 50% 42%,
+          rgba(255,255,255,0.06) 0%,
+          rgba(255,255,255,0.00) 55%
+        ),
+
+        /* Grund-Farbverlauf */
+        linear-gradient(180deg, var(--table-wine-3), var(--table-wine-1) 40%, var(--table-wine-0));
       background-attachment: fixed;
+
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
     }
 
@@ -193,7 +219,7 @@
         0 0 0 1px rgba(0,0,0,0.25);
     }
 
-    /* ===== FLOOR: Box.png im 6×6 Innenraum (NW an Raster 2B) ===== */
+    /* ===== FLOOR: ersetzt durch Box.png, exakt im 6×6 Innenraum (NW an Raster 2B) ===== */
     .floor{
       position:absolute;
       left: var(--step);
@@ -210,9 +236,6 @@
       background-position: center;
       background-size: 100% 100%;
 
-      /* Farbangleichung Richtung BoxFloor */
-      filter: var(--box-filter);
-
       /* optional: leichter “Einbettungslook” wie vorher */
       box-shadow:
         inset 18px 18px 34px rgba(255,255,255,0.10),
@@ -221,17 +244,6 @@
         inset  26px 0 40px rgba(0,0,0,0.26),
         inset  0 -26px 40px rgba(0,0,0,0.30),
         inset  0  26px 40px rgba(0,0,0,0.30);
-    }
-
-    /* Tönungs-Overlay (mischt den alten Bodenfarbton rein, nimmt gelb raus) */
-    .floor::after{
-      content:"";
-      position:absolute;
-      inset:0;
-      background: var(--floor);
-      opacity: var(--box-tint-opacity);
-      mix-blend-mode: multiply;
-      pointer-events:none;
     }
 
     .ball{
@@ -952,7 +964,6 @@
       document.documentElement.style.setProperty("--kippstrip-h", h + "px");
     }
 
-    // gleiche Zeit für Vollansicht und Zwischenkipp
     function getTiming(){
       const v = Number(speedSlider.value || 3);
       const hold = Math.max(520, Math.round(2200 - v * 186));
@@ -1016,7 +1027,6 @@
       return pool.slice(0, count);
     }
 
-    // ===== Rotation / Views =====
     const rotDeg = [0, 90, 180, 270];
     let rotIndex  = 0;
     let faceIndex = 0;
@@ -1088,7 +1098,6 @@
       renderWEmpty();
     }
 
-    // ===== Attention Logic =====
     let hasAdjustedOnce = false;
 
     let runningDemo     = false;
@@ -1127,7 +1136,6 @@
       playGlyph.className = isPause ? "pauseIcon" : "playIcon";
     }
 
-    // ===== MODE SWITCH =====
     function showSpeedMode(){
       speedMode.classList.remove("hidden");
       gameMode.classList.add("hidden");
@@ -1139,13 +1147,12 @@
     function showGameMode(){
       speedMode.classList.add("hidden");
       gameMode.classList.remove("hidden");
-      gcTop.classList.add("hiddenInfo"); // erst NACH Zahlensetzen anzeigen
-      enterSetAttention();               // Zahlen setzen blinkt als erste Aktion
+      gcTop.classList.add("hiddenInfo");
+      enterSetAttention();
     }
 
-    // ===== Demo Ablauf (Play/Pause) – ohne Pfeil/HUD/Zahlen =====
     async function waitOrPause(ms, myToken){
-      const slice = 40; // fein genug für Pause
+      const slice = 40;
       let elapsed = 0;
       while(elapsed < ms){
         if(myToken !== demoToken) return false;
@@ -1166,7 +1173,6 @@
       demoPaused = false;
       const myToken = ++demoToken;
 
-      // sofort „was passiert“: direkt mit Zwischenkipp starten
       showKip();
       renderKipEmpty();
       if(!await waitOrPause(getTiming().holdMs, myToken)) { runningDemo=false; return; }
@@ -1190,7 +1196,6 @@
       showW(); renderWEmpty();
       if(!await waitOrPause(getTiming().holdMs, myToken)) { runningDemo=false; return; }
 
-      // Erweiterung: Q3 -> Zwischenkipp -> W2 auf Q0
       showKip(); renderKipEmpty();
       if(!await waitOrPause(getTiming().holdMs, myToken)) { runningDemo=false; return; }
 
@@ -1208,7 +1213,6 @@
       setPlayGlyph(false);
     }
 
-    // ===== Zahlensetzen-Logik (bekannter Ablauf, ohne Pfeil/HUD) =====
     let planned = [
       [null,null,null,null],
       [null,null,null,null],
@@ -1277,7 +1281,6 @@
 
       reroll12_keepEmpty();
 
-      // 1) erst leer (kurz), dann Zahlen
       showW();
       renderWEmpty();
       if(!(await (async()=>{ await sleep(Math.round(getTiming().holdMs * 0.5)); return (myToken===setToken); })())) { runningSet=false; return; }
@@ -1316,12 +1319,10 @@
       renderKip();
       if(!(await (async()=>{ await sleep(getTiming().holdMs); return (myToken===setToken); })())) { runningSet=false; return; }
 
-      // Ende: wieder Vollansicht
       advanceFullCW();
       showW();
       renderW();
 
-      // Nach Abschluss: Ziel-Info auf der schwarzen Konsole anzeigen
       showTargetInfoAfterSet();
 
       runningSet = false;
@@ -1332,7 +1333,6 @@
       runningSet = false;
     }
 
-    // ===== Ziel-Info (vorerst: random Farbe + Zahl; Deck-System später) =====
     const targetColors = ["--blau","--orange","--gruen","--violett"];
     function showTargetInfoAfterSet(){
       const n = Math.floor(Math.random() * 12) + 1;
@@ -1346,35 +1346,27 @@
       setAttentionSet(false);
     }
 
-    // ===== Events =====
     speedSlider.addEventListener("input", () => {
       hasAdjustedOnce = true;
-      // während Demo-Pause darf man regeln; Demo läuft weiter mit aktueller Timing-Berechnung
       if(!runningDemo) enterPlayAttention();
     });
 
-    // Play/Pause Dual:
-    // - wenn Demo nicht läuft -> Start (Glyph: Pause)
-    // - wenn Demo läuft -> Toggle Pause/Resume (Glyph wechselt)
     btnPlay.addEventListener("click", async () => {
       if(!hasAdjustedOnce) enterPlayAttention();
 
       if(!runningDemo){
         setAttentionPlay(false);
-        setPlayGlyph(true);       // jetzt Pause anzeigen
+        setPlayGlyph(true);
         await runDemoCycle();
-        // nach Ende: wieder Play anzeigen + Blinkhinweis
         setPlayGlyph(false);
         enterPlayAttention();
         return;
       }
 
-      // Demo läuft -> Pause/Resume toggeln
       demoPaused = !demoPaused;
       setPlayGlyph(demoPaused ? false : true);
     });
 
-    // OK: Demo/Set abbrechen, W1Q0 anzeigen, Game-Mode rein
     btnOk.addEventListener("click", () => {
       cancelDemo();
       cancelSetNumbers();
@@ -1384,12 +1376,10 @@
       showGameMode();
     });
 
-    // Zahlen setzen
     btnSetNumbers.addEventListener("click", async () => {
       await runSetNumbersCycle();
     });
 
-    // STOP: Abbruch + zurück zur Speed-Einstellung
     btnStop.addEventListener("click", () => {
       cancelDemo();
       cancelSetNumbers();
