--- a/index.html
+++ b/index.html
@@ -84,12 +84,13 @@
       align-items:center;
     }
 
+    /* ===== Title Row + Buttons ===== */
     .titleRow{
       width: 100%;
       display:flex;
-      align-items: baseline;
+      align-items:center;
       justify-content: space-between;
-      gap: 12px;
+      gap: 10px;
       user-select:none;
       margin-bottom: 2px;
     }
@@ -104,6 +105,7 @@
         0 1px 0 rgba(255,255,255,0.35),
         0 10px 18px rgba(0,0,0,0.10);
       white-space: nowrap;
+      line-height: 1;
     }
     .sideTitle.left{ text-align: left; padding-left: 6px; }
     .sideTitle.right{ text-align: right; padding-right: 6px; }
@@ -112,7 +114,8 @@
       flex: 0 0 auto;
       display:flex;
       justify-content:center;
-      align-items: baseline;
+      align-items:center;
+      gap: 10px;
     }
     .titleMain h1{
       margin: 0;
@@ -125,6 +128,39 @@
         0 1px 0 rgba(255,255,255,0.35),
         0 10px 18px rgba(0,0,0,0.25);
       line-height: 1;
+    }
+
+    .topBtn{
+      width: 44px;
+      height: 44px;
+      border-radius: 0;
+      border: 2px solid rgba(0,0,0,0.55);
+      background:
+        linear-gradient(180deg, rgba(255,255,255,0.14), rgba(0,0,0,0.05)),
+        var(--btn-bg);
+      box-shadow:
+        0 18px 22px rgba(0,0,0,0.35),
+        0 8px 14px rgba(0,0,0,0.22),
+        0 0 0 1px rgba(255,255,255,0.18) inset;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      user-select:none;
+      -webkit-tap-highlight-color: transparent;
+      cursor: pointer;
+      padding:0;
+      line-height:1;
+    }
+    .topBtn:active{
+      transform: scale(0.985);
+      filter: brightness(0.98);
+    }
+    .topBtn span{
+      font-weight: 1000;
+      color: #111;
+      text-shadow: 0 1px 0 rgba(255,255,255,0.35);
+      font-size: 22px;
+      transform: translateY(-0.5px);
     }
 
     .boxShell{
@@ -387,41 +423,6 @@
     .k-2f{ left: calc(5 * var(--step)); top: calc(1 * var(--step)); }
     .k-2g{ left: calc(6 * var(--step)); top: calc(1 * var(--step)); }
 
-    .exitBtn{
-      position:absolute;
-      left: calc(7 * var(--step));
-      top:  0;
-      width: var(--cell);
-      height: var(--cell);
-      z-index: 9500;
-      pointer-events:auto;
-      user-select:none;
-
-      display:flex;
-      align-items:center;
-      justify-content:center;
-
-      background: transparent;
-      border: 2px solid rgba(190,190,190,0.85);
-      box-sizing: border-box;
-      outline: none;
-
-      box-shadow:
-        0 10px 16px rgba(0,0,0,0.30);
-    }
-    .exitBtn span{
-      font-weight: 1000;
-      font-size: clamp(14px, 3.4vmin, 22px);
-      color: rgba(210,210,210,0.95);
-      text-shadow: 0 1px 0 rgba(0,0,0,0.45);
-      line-height: 1;
-      transform: translateY(-0.5px);
-    }
-    .exitBtn:active{
-      transform: scale(0.98);
-      filter: brightness(1.05);
-    }
-
     .kippspeedBlock{
       width: 100%;
       height: var(--kippstrip-h);
@@ -478,6 +479,7 @@
       user-select:none;
       -webkit-tap-highlight-color: transparent;
       cursor: pointer;
+      padding:0;
     }
     .squareBtn:active{
       transform: scale(0.985);
@@ -762,8 +764,19 @@
   <div class="stage">
 
     <div class="titleRow" aria-label="Titelzeile">
+      <button id="backBtn" class="topBtn" aria-label="Zurück">
+        <span>←</span>
+      </button>
+
       <div class="sideTitle left">KIPP COLOR</div>
-      <div class="titleMain"><h1>DigiKIPP</h1></div>
+
+      <div class="titleMain">
+        <h1>DigiKIPP</h1>
+        <button id="exitBtnTop" class="topBtn" aria-label="Spiel beenden">
+          <span>X</span>
+        </button>
+      </div>
+
       <div class="sideTitle right">KIPP COLOR</div>
     </div>
 
@@ -804,10 +817,6 @@
         </div>
 
         <div class="ball" aria-label="Kugel"></div>
-
-        <button id="exitBtn" class="exitBtn" aria-label="Spiel beenden">
-          <span>X</span>
-        </button>
       </div>
 
       <div class="kippspeedBlock attnSpeed" id="kippspeedBlock" aria-label="Konsole">
@@ -889,7 +898,9 @@
     const btnPlay     = document.getElementById("btnPlay");
     const playGlyph   = document.getElementById("playGlyph");
     const btnOk       = document.getElementById("btnOk");
-    const exitBtn     = document.getElementById("exitBtn");
+
+    const backBtn     = document.getElementById("backBtn");
+    const exitBtnTop  = document.getElementById("exitBtnTop");
 
     const btnSetNumbers = document.getElementById("btnSetNumbers");
     const btnStop       = document.getElementById("btnStop");
@@ -983,7 +994,6 @@
     let rotIndex  = 0; // Q0..Q3
     let faceIndex = 0; // W1..W3 (0..2)
 
-    // Richtungskonstanten
     const DIR_CW  = +1;
     const DIR_CCW = -1;
 
@@ -993,20 +1003,16 @@
       kipGroup.style.setProperty("--rot", deg + "deg");
     }
 
-    // zentral: "nächstes Face" abhängig von Richtung (echtes Weiterdrehen)
     function nextFaceIdx(curr, dir){
       return (curr + (dir === DIR_CW ? 1 : 2)) % 3; // CCW = -1 mod 3
     }
 
     function advanceFull(dir){
-      // Q rotiert 4er-zyklisch
-      rotIndex  = (rotIndex + (dir === DIR_CW ? 1 : 3)) % 4; // CCW = -1 mod 4
-      // W rotiert 3er-zyklisch
+      rotIndex  = (rotIndex + (dir === DIR_CW ? 1 : 3)) % 4;
       faceIndex = nextFaceIdx(faceIndex, dir);
       setRotationSnap();
     }
 
-    // optional: explizite Helfer
     function advanceFullCW(){  advanceFull(DIR_CW); }
     function advanceFullCCW(){ advanceFull(DIR_CCW); }
 
@@ -1075,15 +1081,9 @@
     let runningSet      = false;
     let setToken        = 0;
 
-    function setAttentionSpeed(on){
-      kippspeedBlock.classList.toggle("attnSpeed", !!on);
-    }
-    function setAttentionPlay(on){
-      kippspeedBlock.classList.toggle("attnPlay", !!on);
-    }
-    function setAttentionSet(on){
-      kippspeedBlock.classList.toggle("attnSet", !!on);
-    }
+    function setAttentionSpeed(on){ kippspeedBlock.classList.toggle("attnSpeed", !!on); }
+    function setAttentionPlay(on){  kippspeedBlock.classList.toggle("attnPlay",  !!on); }
+    function setAttentionSet(on){   kippspeedBlock.classList.toggle("attnSet",   !!on); }
 
     function enterSpeedAttention(){
       setAttentionSet(false);
@@ -1141,7 +1141,6 @@
       demoPaused = false;
       const myToken = ++demoToken;
 
-      // Demo bleibt CW (wie bisher)
       showKip();
       renderKipEmpty();
       if(!await waitOrPause(getTiming().holdMs, myToken)) { runningDemo=false; return; }
@@ -1207,8 +1206,6 @@
       for(let i=0;i<4;i++) renderNumber(slotTargetsW[i], curr[i]);
     }
 
-    // Mapping: "verdeckte Fläche" -> "sichtbare Reihenfolge" in Zwischenkipp
-    // CW und CCW unterscheiden sich (CCW = rückwärtszyklisch)
     function mapHiddenToVisible_CW(face){
       const [f1,f2,f3,f4] = face;
       return [f4, f3, f2, f1];
@@ -1218,22 +1215,16 @@
       return [f2, f1, f4, f3];
     }
 
-    // ===== FIX: Zwischenkipp muss Richtung wirklich übernehmen =====
-    // Bei CCW muss die Vorschaufläche (links) rückwärtszyklisch sein:
-    // previewIdx = nextFaceIdx(faceIndex, DIR_CCW)  => W1->W3->W2->W1...
+    // Zwischenkipp: Richtung korrekt (CW/CCW)
     function renderKip(dir){
       setRotationSnap();
 
       const curr = sets[faceIndex];
-
-      // >>> WICHTIG: Preview-Face hängt von der Richtung ab (CW:+1, CCW:-1)
-      const previewIdx  = nextFaceIdx(faceIndex, dir);
+      const previewIdx  = nextFaceIdx(faceIndex, dir);   // <-- Richtung wirkt hier!
       const previewFace = sets[previewIdx];
 
-      // rechts: aktuelle Fläche
       for(let i=0;i<4;i++) renderNumber(slotTargetsKipRight[i], curr[i]);
 
-      // links: Vorschau (je nach Richtung anders gemappt)
       const previewNums = (dir === DIR_CW)
         ? mapHiddenToVisible_CW(previewFace)
         : mapHiddenToVisible_CCW(previewFace);
@@ -1261,13 +1252,11 @@
       setRotationSnap();
     }
 
-    // >>> FIX: Richtung als Parameter (damit CCW später wirklich CCW ist)
     async function runSetNumbersCycle(dir){
       if(runningSet) return;
       runningSet = true;
       const myToken = ++setToken;
 
-      // Standard (wie bisher): falls nicht übergeben -> CW
       dir = (dir === DIR_CCW) ? DIR_CCW : DIR_CW;
 
       reroll12_keepEmpty();
@@ -1315,7 +1304,6 @@
       renderW();
 
       showTargetInfoAfterSet();
-
       runningSet = false;
     }
 
@@ -1368,10 +1356,10 @@
       showGameMode();
     });
 
-    // ZAHLEN SETZEN: bleibt wie bisher CW.
-    // Wenn du zum Test CCW willst: runSetNumbersCycle(DIR_CCW)
     btnSetNumbers.addEventListener("click", async () => {
+      // Standard wie bisher: CW
       await runSetNumbersCycle(DIR_CW);
+      // Test CCW (falls du es willst): await runSetNumbersCycle(DIR_CCW);
     });
 
     btnStop.addEventListener("click", () => {
@@ -1381,7 +1369,16 @@
       showSpeedMode();
     });
 
-    exitBtn.addEventListener("click", () => {
+    // Zurück-Pfeil oben: exakt wie STOP
+    backBtn.addEventListener("click", () => {
+      cancelDemo();
+      cancelSetNumbers();
+      resetToW1Q0_Empty();
+      showSpeedMode();
+    });
+
+    // X neben DigiKIPP
+    exitBtnTop.addEventListener("click", () => {
       const ok = confirm("Spiel wirklich beenden?");
       if(ok){
         window.location.href = "about:blank";
